# browser-os

./: .gitignore  ARCHITECTURE.md  BUG_REPORT.md  DESIGN_DECISIONS.md  EXTENSIONS.md  GITHUB_SETUP.md  README.md  TASKS.md
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/pkg/: browser_os.d.ts  browser_os_bg.wasm  browser_os_bg.wasm.d.ts
kernel/src/: crypto.rs  distributed.rs  lib.rs  snapshot.rs  typestate.rs  wasi.rs
paper/: browseros_paper.tex
web/: .gitignore  browser_os.d.ts  browser_os.js  browser_os_bg.wasm  browser_os_bg.wasm.d.ts  debug.html  index.html  main.js  package.json  snapshot.js  test.html  wasi_shim.js  webrtc_ipc.js
